tests/semantic/invalid/variable_declared_never_defined.c
/*
 * Multi-line comment.
 */

void main(){
  int32_t a;
}
